Optimized for me

--- a/dreambooth_runpod_joepenna.ipynb
+++ b/dreambooth_runpod_joepenna.ipynb
@@ -35,23 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2AsGA1xpNQnb",
+   "id": "55f4e295-2aed-4273-8e4d-24a009ac6758",
    "metadata": {
-    "id": "2AsGA1xpNQnb"
-   },
-   "outputs": [],
-   "source": [
-    "# If running on Vast.AI, copy the code in this cell into a new notebook. Run it, then launch the `dreambooth_runpod_joepenna.ipynb` notebook from the jupyter interface.\n",
-    "!git clone https://github.com/JoePenna/Dreambooth-Stable-Diffusion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e1bc458-091b-42f4-a125-c3f0df20f29d",
-   "metadata": {
-    "id": "9e1bc458-091b-42f4-a125-c3f0df20f29d",
-    "scrolled": true
+    "id": "9e1bc458-091b-42f4-a125-c3f0df20f29d"
    },
    "outputs": [],
    "source": [
@@ -73,30 +59,18 @@
     "!pip install -qq diffusers[\"training\"]==0.3.0 transformers ftfy\n",
     "!pip install -qq \"ipywidgets>=7,<8\"\n",
     "!pip install huggingface_hub\n",
-    "!pip install ipywidgets==7.7.1\n",
-    "!pip install captionizer==1.0.1\n"
+    "!pip install ipywidgets==7.7.1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dae11c10",
+   "id": "3339e6cc",
    "metadata": {
-    "id": "dae11c10"
-   },
-   "outputs": [],
-   "source": [
-    "# Hugging Face Login\n",
-    "from huggingface_hub import notebook_login\n",
-    "\n",
-    "notebook_login()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -106,8 +80,10 @@
     "from huggingface_hub import hf_hub_download\n",
     "downloaded_model_path = hf_hub_download(\n",
     " repo_id=\"CompVis/stable-diffusion-v-1-4-original\",\n",
-    " filename=\"sd-v1-4.ckpt\",\n",
-    " use_auth_token=True\n",
+    " #filename=\"sd-v1-4.ckpt\",\n",
+    " filename=\"sd-v1-4-full-ema.ckpt\",   \n",
+    " #use_auth_token=True,   \n",
+    " use_auth_token=\"<your_huggingface_token>\"\n",
     ")\n",
     "\n",
     "# Move the sd-v1-4.ckpt to the root of this directory as \"model.ckpt\"\n",
@@ -121,7 +97,9 @@
    "cell_type": "markdown",
    "id": "17d1d11a",
    "metadata": {
-    "id": "17d1d11a"
+    "id": "17d1d11a",
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
    },
    "source": [
     "# Regularization Images (Skip this section if you are uploading your own or using the provided images)"
@@ -187,6 +165,10 @@
   },
   {
    "cell_type": "markdown",
+   "id": "97a52754-19ba-4e2d-a85c-0f463d669069",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Download pre-generated regularization images\n",
     "We've created the following image sets\n",
@@ -196,23 +178,22 @@
     "`person_ddim`\n",
     "`woman_ddim` - provided by David Bielejeski - ddim @ 50 steps, CFG 10.0\n",
     "`person_ddim` is recommended"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e7EydXCjOV1v",
    "metadata": {
-    "id": "e7EydXCjOV1v"
+    "id": "e7EydXCjOV1v",
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [],
    "source": [
     "#Download Regularization Images\n",
     "\n",
-    "dataset=\"person_ddim\" #@param [\"man_euler\", \"man_unsplash\", \"person_ddim\", \"woman_ddim\", \"blonde_woman\"]\n",
+    "dataset=\"woman_euler_a\" #@param [\"man_euler\", \"man_unsplash\", \"person_ddim\", \"woman_ddim\", \"blonde_woman\"]\n",
     "!git clone https://github.com/djbielejeski/Stable-Diffusion-Regularization-Images-{dataset}.git\n",
     "\n",
     "!mkdir -p regularization_images/{dataset}\n",
@@ -221,6 +202,10 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a97c81d8",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Upload your training images\n",
     "Upload 10-20 images of someone to\n",
@@ -238,69 +223,6 @@
     "The images should be:\n",
     "\n",
     "- as close as possible to the kind of images you're trying to make"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "#@markdown Add here the URLs to the images of the subject you are adding\n",
-    "urls = [\n",
-    " \"https://i.imgur.com/test1.png\",\n",
-    " \"https://i.imgur.com/test2.png\",\n",
-    " \"https://i.imgur.com/test3.png\",\n",
-    " \"https://i.imgur.com/test4.png\",\n",
-    " \"https://i.imgur.com/test5.png\",\n",
-    " # You can add additional images here -- about 20-30 images in different\n",
-    "]"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#@title Download and check the images you have just added\n",
-    "import os\n",
-    "import requests\n",
-    "from io import BytesIO\n",
-    "from PIL import Image\n",
-    "\n",
-    "\n",
-    "def image_grid(imgs, rows, cols):\n",
-    " assert len(imgs) == rows*cols\n",
-    "\n",
-    " w, h = imgs[0].size\n",
-    " grid = Image.new('RGB', size=(cols*w, rows*h))\n",
-    " grid_w, grid_h = grid.size\n",
-    "\n",
-    " for i, img in enumerate(imgs):\n",
-    "  grid.paste(img, box=(i%cols*w, i//cols*h))\n",
-    " return grid\n",
-    "\n",
-    "def download_image(url):\n",
-    " try:\n",
-    "  response = requests.get(url)\n",
-    " except:\n",
-    "  return None\n",
-    " return Image.open(BytesIO(response.content)).convert(\"RGB\")\n",
-    "\n",
-    "images = list(filter(None,[download_image(url) for url in urls]))\n",
-    "save_path = \"./training_images\"\n",
-    "if not os.path.exists(save_path):\n",
-    " os.mkdir(save_path)\n",
-    "[image.save(f\"{save_path}/{i}.png\", format=\"png\") for i, image in enumerate(images)]\n",
-    "image_grid(images, 1, len(images))"
    ]
   },
   {
@@ -310,7 +232,7 @@
     "id": "ad4e50df"
    },
    "source": [
-    "## Training\n",
+    "# Training\n",
     "\n",
     "If training a person or subject, keep an eye on your project's `logs/{folder}/images/train/samples_scaled_gs-00xxxx` generations.\n",
     "\n",
@@ -323,6 +245,7 @@
    "id": "6fa5dd66-2ca0-4819-907e-802e25583ae6",
    "metadata": {
     "id": "6fa5dd66-2ca0-4819-907e-802e25583ae6",
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -330,17 +253,17 @@
     "# Training\n",
     "\n",
     "# This isn't used for training, just to help you remember what your trained into the model.\n",
-    "project_name = \"project_name\"\n",
+    "project_name = \"<project_name>\"\n",
     "\n",
     "# MAX STEPS\n",
     "# How many steps do you want to train for?\n",
-    "max_training_steps = 2000\n",
+    "max_training_steps = 10000\n",
     "\n",
     "# Match class_word to the category of the regularization images you chose above.\n",
-    "class_word = \"person\" # typical uses are \"man\", \"person\", \"woman\"\n",
+    "class_word = \"<>class\" # typical uses are \"man\", \"person\", \"woman\"\n",
     "\n",
     "# This is the unique token you are incorporating into the stable diffusion model.\n",
-    "token = \"firstNameLastName\"\n",
+    "token = \"<token>\"\n",
     "\n",
     "\n",
     "reg_data_root = \"/workspace/Dreambooth-Stable-Diffusion/regularization_images/\" + dataset\n",
@@ -357,7 +280,8 @@
     " --max_training_steps {max_training_steps} \\\n",
     " --class_word \"{class_word}\" \\\n",
     " --token \"{token}\" \\\n",
-    " --no-test"
+    " --no-test \\\n",
+    " --log_every_n_steps 200"
    ]
   },
   {
@@ -371,8 +295,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c9438357",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -394,6 +322,8 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8a371e38",
+   "metadata": {},
    "source": [
     "# Optional - Upload to google drive\n",
     "* run the following commands in a new `terminal` in the `Dreambooth-Stable-Diffusion` directory\n",
@@ -401,10 +331,7 @@
     "* `./gdrive about`\n",
     "* `paste your token here after navigating to the link`\n",
     "* `./gdrive upload trained_models/{file_name.ckpt}`"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -428,7 +355,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "80ddb03b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "!python scripts/stable_txt2img.py \\\n",
@@ -438,7 +368,7 @@
     " --scale 7.0 \\\n",
     " --ddim_steps 50 \\\n",
     " --ckpt \"/workspace/Dreambooth-Stable-Diffusion/trained_models/{file_name}\" \\\n",
-    " --prompt \"joepenna person as a masterpiece portrait painting by John Singer Sargent in the style of Rembrandt\""
+    " --prompt \"fancy portrait of a crystalized carinadrugach womana by Greg Rutkowski, Sung Choi, Mitchell Mohrhauser, Maciej Kuciara, Johnson Ting, Maxim Verehin, Peter Konig, final fantasy , mythical, 8k photorealistic, cinematic lighting, HD, high details, atmospheric\""
    ]
   }
  ],
